--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
