--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "crc": "^3.8.0",
+    "crc-32": "^1.2.0",
     "express": "^4.16.4",
     "path": "^0.12.7",
     "rxjs": "~6.2.0",
