--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.6",
     "@angular-devkit/build-angular": "^0.13.8",
     "@angular/animations": "^6.1.0",
     "@angular/cli": "^6.2.9",
@@ -26,15 +27,15 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "body-parser": "^1.17.1",
     "core-js": "^2.5.4",
     "crc-32": "^1.2.0",
     "express": "^4.16.4",
-    "path": "^0.12.7",
-    "rxjs": "~6.2.0",
-    "body-parser": "^1.17.1",
     "file-type": "^4.3.0",
     "morgan": "^1.8.1",
+    "path": "^0.12.7",
     "request": "^2.81.0",
+    "rxjs": "~6.2.0",
     "typescript": "^2.9.2",
     "zone.js": "~0.8.26"
   },
@@ -43,6 +44,7 @@
     "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/googlemaps": "^3.36.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
