--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "amazing-time-picker": "^1.8.0",
     "body-parser": "^1.17.1",
     "core-js": "^2.5.4",
     "crc-32": "^1.2.0",
