--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "amazing-time-picker": "^1.8.0",
+    "angular-bootstrap-md": "^8.2.0",
     "body-parser": "^1.17.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "crc-32": "^1.2.0",
     "express": "^4.16.4",
     "file-type": "^4.3.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "mdbootstrap": "^4.8.8",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "request": "^2.81.0",
