API integration and Spinner

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "font-awesome": "^4.7.0",
         "hammerjs": "^2.0.8",
         "morgan": "^1.8.1",
+        "ng4-loading-spinner": "^1.2.3",
+        "ngx-spinner": "^8.0.3",
         "path": "^0.12.7",
         "request": "^2.81.0",
         "rxjs": "~6.2.0",
